JG-2009-01-12-0: Bugfix:     Fixed installation with windows hosts.
                 Review:     DG

EB-2009-01-09-0: Bugfix:     - enabled enforce limit tests again
                             - added some jsv/qalter related tests
                             - changed the way how TS handles vi (caused
									    problem with special vim plugins)
                 Review:     CR

MP-2009-01-07-0: Enhancem.:  added check for IZ 2752. qconf -Aconf should not
                             be able to modify an existing configuration
                 Review:     AP

JG-2008-01-05-1: Enhancem.:  o additional check for error logging in
                               tight_integration test
                             o give bdb rpc server a grace period at startup
                               before starting sge_qmaster - otherwise qmaster
                               (on a fast host) might try to connect to bdb
                               server (on a slow host) before it is fully
                               initialized.
                 Review:     CR

CR-2008-01-05-0: Bugfix:     fixed test "issue_1156"
                 Review:     JG

JG-2008-01-05-0: Enhancem.:  extended tight_integration test to reliably
                             show IZ 2815.
                             Removed workarounds to avoid running into IZ 2815.
                 Review:     DG

CR-2008-12-19-1: Bugfix:     o disabled test for GE versions < 62
                 Belongs to: CR-2008-12-19-0

CR-2008-12-19-0: Enhancem.:  o added test for IZ 2837/ CR 6786152
                               /checktree/system_tests/commlib/fork
                 Review:     RD

RD-2008-12-19-0: Bugfix:     added test if TMPDIR is cleaned after a tight
                             integration job exited
                 Review:     CR

AA-2008-12-18-0: Bugfix:     o adjusting issue_2459 test
                 Bugster:    6784655 
                 Issue:      2832
                 Review:     MD
