@@ -1,3 +1,6 @@
+RD-2009-01-12-0: Enhancem.:  Added test for scheduler message check
+                 Review:     CR
+
 JG-2009-01-12-0: Bugfix:     Fixed installation with windows hosts.
                  Review:     DG
 
